# sqlitequery

./: .gitignore  CHANGELOG.md  README.md  SQLiteAnalyzer.pro  SQUAD_SETUP.md  database.h  databaseinfo.h  dbanalyzer.cpp  dbanalyzer.h  dbanalyzertask.cpp  dbquery.cpp  dbquery.h  highlighter.cpp  highlighter.h  install.ps1  install.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  recentfiles.cpp  recentfiles.h  snapcraft.yaml  squad.config.ts
.devcontainer/: README.md  devcontainer.json  postCreateCommand.sh  snap-build.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  changelog.yml  docs.yml  linux-template.yml  linux.yml  macos-template.yml  macos.yml  release.yml  windows-template.yml  windows.yml
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/fenster/: charter.md  history.md
.squad/agents/hockney/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
docs/: 404.html  WINDOWS_STORE_PUBLISHING.md  index.html  robots.txt  script.js  sitemap.xml  styles.css
snap/: snapcraft.yaml
src/: CMakeLists.txt  Makefile  SQLiteAnalyzer.pro  build.ps1  build.sh  cancellation.cpp  cancellation.h  database.cpp  database.h  databaseinfo.h  dbanalyzer.cpp  dbanalyzer.h  dbanalyzertask.h  dbexport.cpp  dbexport.h  dbquery.cpp  dbquery.h  dbtree.cpp  dbtree.h  highlighter.cpp  highlighter.h  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recentfiles.cpp  recentfiles.h  settings.cpp  settings.h  setup.iss  snapcraft.yaml
src/cli/: export.cpp  export.h  run.cpp  run.h  script.cpp  script.h
src/database/: database.cpp  databaseinfo.h  dbanalyzer.cpp  dbdataexport.cpp  dbdataexport.h  dbexport.cpp  dbexport.h  dbexportdata.cpp  dbexportdata.h  dbexportschema.cpp  dbexportschema.h  dbquery.cpp  dbquery.h  dbschemaexport.cpp  dbschemaexport.h  dbtree.cpp  dbtree.h  progress.h
src/gui/: highlighter.cpp  highlighter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  prompts.cpp  prompts.h
src/project/: CMakeLists.txt  SQLiteAnalyzer.pro  build-msix.ps1  build.ps1  build.sh  postinst  prerm.sh  setup.iss  snapcraft.yaml  users.csv
src/project/chocolately/tools/: chocolateyuninstall.ps1
src/project/chocolatey/: sqlitequery.nuspec
src/project/chocolatey/tools/: VERIFICATION.txt  chocolateyinstall.ps1
src/project/linux/usr/share/applications/: sqlitequery.desktop
src/project/msix/: AppxManifest.xml
src/resources/: icon.icns
src/settings/: recentfiles.cpp  settings.cpp  settings.h
src/threading/: cancellation.cpp  cancellation.h  mainthread.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  prompts.h
